php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #42579 apache_reset_timeout() does not exist.
Submitted: 2007-09-06 14:12 UTC Modified: 2007-09-07 08:50 UTC
From: thomas dot hebinck at digionline dot de Assigned:
Status: Closed Package: Apache related
PHP Version: 5.2.4 OS: Linux
Private report: No CVE-ID: None
 [2007-09-06 14:12 UTC] thomas dot hebinck at digionline dot de
Description:
------------
The documented function apache_reset_timeout() does not exist.

Reproduce code:
---------------
<?
apache_reset_timeout()
?>

Expected result:
----------------
nothing visible

Actual result:
--------------
PHP Fatal error:  Call to undefined function apache_reset_timeout()

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-09-06 14:15 UTC] thomas dot hebinck at digionline dot de
This will help:

diff -urw php_apache.c.original php_apache.c
--- php_apache.c.original       Sat Feb 24 03:17:28 2007
+++ php_apache.c        Thu Sep  6 15:58:12 2007
@@ -66,6 +66,7 @@
        PHP_FE(apache_response_headers,                                 NULL)
        PHP_FE(apache_get_version,                                      NULL)
        PHP_FE(apache_get_modules,                                      NULL)
+       PHP_FE(apache_reset_timeout,                                    NULL)
        PHP_FALIAS(getallheaders, apache_request_headers, NULL)
        {NULL, NULL, NULL}
 };

... but I don't know, if the function is really finished. 
At least doesn't seem to work with soap.
 [2007-09-06 15:08 UTC] thomas dot hebinck at digionline dot de
... it works with soap (after patching the source) ;-)
 [2007-09-06 22:25 UTC] jani@php.net
In what directory is that file you patched? (there are 3 such files in sources, iirc)
 [2007-09-07 07:07 UTC] thomas dot hebinck at digionline dot de
The function is defined in: 
php-5.2.4/sapi/apache/php_apache.c
 [2007-09-07 08:50 UTC] jani@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 20 01:00:02 2026 UTC