- Fixed bug #42579 (apache_reset_timeout() does not exist)